tests/baselines/reference/subtypingWithCallSignaturesWithOptionalParameters.errors.txt
subtypingWithCallSignaturesWithOptionalParameters.ts(19,11): error TS2430: Interface 'I3' incorrectly extends interface 'Base'.
  Types of property 'a' are incompatible.
    Type '(x: number) => number' is not assignable to type '() => number'.
      Target signature provides too few arguments. Expected 1 or more, but got 0.
subtypingWithCallSignaturesWithOptionalParameters.ts(49,11): error TS2430: Interface 'I10' incorrectly extends interface 'Base'.
  Types of property 'a3' are incompatible.
    Type '(x: number, y: number) => number' is not assignable to type '(x: number) => number'.
      Target signature provides too few arguments. Expected 2 or more, but got 1.


==== subtypingWithCallSignaturesWithOptionalParameters.ts (2 errors) ====
    // call signatures in derived types must have the same or fewer optional parameters as the base type
    
    interface Base { 
        a: () => number;
        a2: (x?: number) => number;
        a3: (x: number) => number;
        a4: (x: number, y?: number) => number;
        a5: (x?: number, y?: number) => number;
    }
    
    interface I1 extends Base {
        a: () => number; // ok, same number of required params
    }
    
    interface I2 extends Base {
        a: (x?: number) => number; // ok, same number of required params
    }
    
    interface I3 extends Base {
              ~~
!!! error TS2430: Interface 'I3' incorrectly extends interface 'Base'.
!!! error TS2430:   Types of property 'a' are incompatible.
!!! error TS2430:     Type '(x: number) => number' is not assignable to type '() => number'.
!!! error TS2430:       Target signature provides too few arguments. Expected 1 or more, but got 0.
        a: (x: number) => number; // error, too many required params
    }
    
    
    interface I4 extends Base {
        a2: () => number; // ok, same number of required params
    }
    
    interface I5 extends Base {
        a2: (x?: number) => number; // ok, same number of required params
    }
    
    interface I6 extends Base {
        a2: (x: number) => number; // ok, same number of params
    }
    
    
    interface I7 extends Base {
        a3: () => number; // ok, fewer required params
    }
    
    interface I8 extends Base {
        a3: (x?: number) => number; // ok, fewer required params
    }
    
    interface I9 extends Base {
        a3: (x: number) => number; // ok, same number of required params
    }
    
    interface I10 extends Base {
              ~~~
!!! error TS2430: Interface 'I10' incorrectly extends interface 'Base'.
!!! error TS2430:   Types of property 'a3' are incompatible.
!!! error TS2430:     Type '(x: number, y: number) => number' is not assignable to type '(x: number) => number'.
!!! error TS2430:       Target signature provides too few arguments. Expected 2 or more, but got 1.
        a3: (x: number, y: number) => number;  // error, too many required params
    }
    
    
    interface I11 extends Base {
        a4: () => number; // ok, fewer required params
    }
    
    interface I12 extends Base {
        a4: (x?: number, y?: number) => number; // ok, fewer required params
    }
    
    interface I13 extends Base {
        a4: (x: number) => number; // ok, same number of required params
    }
    
    interface I14 extends Base {
        a4: (x: number, y: number) => number;  // ok, same number of params
    }
    
    
    interface I15 extends Base {
        a5: () => number; // ok, fewer required params
    }
    
    interface I16 extends Base {
        a5: (x?: number, y?: number) => number; // ok, fewer required params
    }
    
    interface I17 extends Base {
        a5: (x: number) => number; // ok, all present params match
    }
    
    interface I18 extends Base {
        a5: (x: number, y: number) => number;  // ok, same number of params
    }